# VoiceForge

./: .env.example  .gitignore  blueprint.md  install_cuda_torch.ps1  knowledge_graph.md  main.py  plan.md  pyproject.toml  readme.md  requirements.txt  spec.md  start.bat  start.sh
core/: __init__.py  asr_engine.py  audio_recorder.py  llm_polish.py
history/: 20260415_184526.txt  20260415_230556.txt  20260415_230604.txt  20260415_230611.txt
locales/: en.json  ja.json  zh.json
pages/: __init__.py  file_page.py  history_page.py  polish_page.py  realtime_page.py  settings_page.py
themes/: ocean.json  warm.json
utils/: __init__.py  audio_utils.py  config.py  history_manager.py  i18n.py  model_manager.py  opencc_converter.py  polish_templates.py
